--- a/ui/entry.html
+++ b/ui/entry.html
@@ -16,46 +16,48 @@
             <section>
                 <div class="container">
                     <div class="row">
-                        <p>Categories:</p>
-                        <ul id="categories"></ul>
-                        <p><a href="#" onclick="moreParents(); return false">More...</a> <a id="addParent">Add</a></p>
-                        <p>Language: <span id="locale"></span></p>
-                        <p>Title: <span id="link"></span></p>
-                        <video
-                            style="display: none"
-                            id="my-video"
-                            class="video-js"
-                            controls="controls"
-                            preload="auto"
-                            width="640"
-                            height="264"
-                            data-setup="{}"
-                        >
-                            <source/>
-                            <p class="vjs-no-js">
-                            To view this video please enable JavaScript, and consider upgrading to a
-                            web browser that
-                            <a href="https://videojs.com/html5-video-support/" target="_blank"
-                                >supports HTML5 video</a>
-                            </p>
-                        </video>
-                        <audio
-                            style="display: none"
-                            id="my-audio"
-                            class="video-js"
-                            controls="controls"
-                            preload="auto"
-                            data-setup="{}"
-                        >
-                            <source/>
-                            <p class="vjs-no-js">
-                            To hear this audio please enable JavaScript, and consider upgrading to a
-                            web browser that
-                            <a href="https://videojs.com/html5-video-support/" target="_blank"
-                                >supports HTML5 audio</a>
-                            </p>
-                        </audio>
-                        <p>Description: <span id="description"></span></p>
+                        <div class="col-xs-12">
+                            <p>Categories:</p>
+                            <ul id="categories"></ul>
+                            <p><a href="#" onclick="moreParents(); return false">More...</a> <a id="addParent">Add</a></p>
+                            <p>Language: <span id="locale"></span></p>
+                            <p>Title: <span id="link"></span></p>
+                            <video
+                                style="display: none"
+                                id="my-video"
+                                class="video-js"
+                                controls="controls"
+                                preload="auto"
+                                width="640"
+                                height="264"
+                                data-setup="{}"
+                            >
+                                <source/>
+                                <p class="vjs-no-js">
+                                To view this video please enable JavaScript, and consider upgrading to a
+                                web browser that
+                                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                                    >supports HTML5 video</a>
+                                </p>
+                            </video>
+                            <audio
+                                style="display: none"
+                                id="my-audio"
+                                class="video-js"
+                                controls="controls"
+                                preload="auto"
+                                data-setup="{}"
+                            >
+                                <source/>
+                                <p class="vjs-no-js">
+                                To hear this audio please enable JavaScript, and consider upgrading to a
+                                web browser that
+                                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                                    >supports HTML5 audio</a>
+                                </p>
+                            </audio>
+                            <p>Description: <span id="description"></span></p>
+                        </div>
                     </div>
                 </div>
             </section>
