--- a/ui/author-purchases.html
+++ b/ui/author-purchases.html
@@ -18,18 +18,20 @@
             <section>
                 <div class="container">
                     <div class="row">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>Item</th>
-                                    <th>Price paid (in ETH)</th>
-                                    <th>Author received</th>
-                                    <th>Number of items paid for</th>
-                                    <th>Shipping info</th>
-                                </tr>
-                            </thead>
-                            <tbody id="theTable"></tbody>
-                        </table>
+                        <div class="col-xs-12">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Item</th>
+                                        <th>Price paid (in ETH)</th>
+                                        <th>Author received</th>
+                                        <th>Number of items paid for</th>
+                                        <th>Shipping info</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="theTable"></tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </section>
