--- a/ui/index.html
+++ b/ui/index.html
@@ -30,32 +30,30 @@
     <!-- Featured Section Begin -->
     <section class="featured spad">
         <div class="container">
-            <div class="row featured__filter">
-                    <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat">
-                        <div class="featured__item">
+            <div class="row featured__filter" id="items">
+                <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat hidden" id="item">
+                    <div class="featured__item">
                         <div class="description">
                             <div class="featured__item__text">
-                                <h6 class="Ccategories"><a href="#">Software</a></h6>
+                                <!-- <h6 class="Ccategories"><a href="#">Software</a></h6> -->
                                 <h5 class="title">Lorem Ipsum is simply dummy text</h5>
                             </div>
                         </div>
-                            <div class="featured__item__pic set-bg" data-setbg="img/featured/fetaured.png">
-                                <div class="featured__item__pic__hover">
-                                    <a href="./shop-details.html" class="btn">Quick View</a>
-                                </div>
+                        <div class="featured__item__pic set-bg" data-setbg="img/featured/fetaured.png">
+                            <div class="featured__item__pic__hover">
+                                <a href="#" class="btn">Quick View</a>
                             </div>
-                            <div class="featured__item__text col-md-12">
-                                <h6 class="price"><a href="#">ETH6.00</a></h6>
-                                <h5 class="option">Buy</h5>
-                            </div>
-                            <div class="featured__item__text hover__area">
-                                <a href="#"><i class="fa fa-random"></i></a>
-                                <a href="#" class="primary-btn">Add to Cart</a>
-                                <a href="#"><i class="fa fa-heart"></i></a>
-                            </div>
+                        </div>
+                        <div class="featured__item__text col-md-12">
+                            <h6 class="price"><a href="#">ETH<span class="priceETH">6.00</span></a></h6>
+                            <h5 class="option">Buy</h5>
+                        </div>
+                        <div class="featured__item__text hover__area">
+                            <a href="#" class="primary-btn">Buy</a>
                         </div>
                     </div>
                 </div>
+            </div>
         </div>
     </section>
     <!-- Featured Section End -->
