--- a/ui/template.html
+++ b/ui/template.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="css/mystyle.css" type="text/css"/>
 
     <script src="js/web3modal/index.js"></script>
     <script type="text/javascript" src="artifacts/mewconnect.js"></script>
