voting for items added back

--- a/ui/index.html
+++ b/ui/index.html
@@ -48,6 +48,7 @@
                             <h6 class="price"><a href="#">ETH<span class="priceETH">6.00</span></a></h6>
                             <h5 class="option">Buy</h5>
                         </div>
+                        <div class="voteStr col-md-12"></div>
                         <div class="featured__item__text hover__area">
                             <a href="#" class="primary-btn">Buy</a>
                         </div>
