--- a/ui/template.html
+++ b/ui/template.html
@@ -205,7 +205,7 @@
                             <li><a href="post-link.html">post links</a></li>
                             <li><a href="vote.html">Vote</a></li>
                             <li><a href="settings.html">Settings</a></li>
-                            <li><a href="#">Help</a></li>
+                            <li><a href="help.html">Help</a></li>
                             <li><a href="#"><i class="fa-facebook fa"></i></a></li>
                             <li><a href="#"><i class="fa-twitter fa"></i></a></li>
                         </ul>
