--- a/ui/index.html
+++ b/ui/index.html
@@ -45,12 +45,12 @@
                             </div>
                         </div>
                         <div class="featured__item__text col-md-12">
-                            <h6 class="price"><a href="#">ETH<span class="priceETH">6.00</span></a></h6>
+                            <h6 class="price"><a href="#" class="link">ETH<span class="priceETH">6.00</span></a></h6>
                             <h5 class="option">Buy</h5>
                         </div>
                         <div class="voteStr col-md-12"></div>
                         <div class="featured__item__text hover__area">
-                            <a href="#" class="primary-btn">Buy</a>
+                            <a href="#" class="primary-btn link">Buy</a>
                         </div>
                     </div>
                 </div>
