--- a/ui/template.html
+++ b/ui/template.html
@@ -97,7 +97,7 @@
                             <li><a href="post-link.html">post links</a></li>
                             <li><a href="vote.html">Vote</a></li>
                             <li><a href="settings.html">Settings</a></li>
-                            <li><a href="help.html">Help</a></li>
+                            <li><a href="https://help.zondirectory.com/help-introduction/">Help</a></li>
                             <li><a href="#"><i class="fa-facebook fa"></i></a></li>
                             <li><a href="#"><i class="fa-twitter fa"></i></a></li>
                         </ul>
@@ -205,7 +205,7 @@
                             <li><a href="post-link.html">post links</a></li>
                             <li><a href="vote.html">Vote</a></li>
                             <li><a href="settings.html">Settings</a></li>
-                            <li><a href="help.html">Help</a></li>
+                            <li><a href="https://help.zondirectory.com/help-introduction/">Help</a></li>
                             <li><a href="#"><i class="fa-facebook fa"></i></a></li>
                             <li><a href="#"><i class="fa-twitter fa"></i></a></li>
                         </ul>
@@ -303,10 +303,10 @@
                     <div class="footer__widget">
                         <h6>Information</h6>
                         <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Privacy policy</a></li>
-                            <li><a href="#">Terms &amp; conditions</a></li>
+                            <li><a href="https://help.zondirectory.com/multipurpose-platform/">About Us</a></li>
+                            <li><a href="https://help.zondirectory.com/contact-us/">Contact Us</a></li>
+                            <li><a href="https://help.zondirectory.com/privacy-policy/">Privacy policy</a></li>
+                            <li><a href="terms-of-use.html">Terms &amp; conditions</a></li>
                         </ul>
                     </div>
                 </div>
@@ -314,11 +314,9 @@
                     <div class="footer__widget">
                         <h6>Customer Care</h6>
                         <ul>
-                            <li><a href="#">My Account</a></li>
                             <li><a href="#">Order History</a></li>
-                            <li><a href="#">Customer Servcices</a></li>
-                            <li><a href="#">FAQs</a></li>
-                            <li><a href="#">Product Support</a></li>
+                            <li><a href="https://help.zondirectory.com/frequently-asked-questions/">FAQs</a></li>
+                            <li><a href="https://help.zondirectory.com/contact-us/">Product Support</a></li>
                         </ul>
                     </div>
                 </div>
@@ -359,7 +357,7 @@
             	</div>
             	<div class="col-lg-6 col-md-6 col-sm-6">
             		<div class="hero__search__form newsletterForm">
-                        <form action="#">
+                        <form action="#" method="post">
                             <input type="email" placeholder="Your Email Address"/>
                             <button type="submit" class="site-btn">SUBSCRIBE</button>
                         </form>
