show account balance

--- a/ui/template.html
+++ b/ui/template.html
@@ -170,7 +170,7 @@
                         </form>
                     </div>
                             <div class="hero__search__phone__text">
-                            <h5>ETH 3.00</h5>
+                            <h5>ETH <span class="accountBalance"></span></h5>
                         </div>
                  </div>
             </div>
