--- a/ui/template.html
+++ b/ui/template.html
@@ -383,6 +383,8 @@
     <div id="wait" style="display: none; position: fixed; top: 50%; left: 50%; margin-right: -50%;
     transform: translate(-50%, -50%); width: 200px; height: 100px; border: 1px solid red; background: lightgray;">Don't close the window!</div>
 
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fa149945f15b10f"></script>
+
     <!-- Js Plugins -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.nice-select.min.js"></script>
